improved logging and handling errors -> returning error msg from client